# pyisyntax

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conda-lock.yml  pyproject.toml  setup.py
.github/workflows/: build_and_test.yml
isyntax/: __init__.py  wrapper.py
isyntax/lowlevel/: io_management.py  libisyntax.py
isyntax_build/: builder.py  pyisyntax.c  python_platform_utils.c  python_platform_utils.h
isyntax_build/src/: python_platform_utils.h  win32_utils.c
tests/: conftest.py  test_lowlevel.py  test_wrapper.py
tests/data/: DOWNLOAD.txt
